<resources>
    <string name="app_name">SSI competence manager</string>.
    <string name="navigation_drawer_open">Open navigation bar</string>.
    <string name="navigation_drawer_close">Close navigation bar</string>.
    <string name="nav_header_title">SSI capability manager</string>
    <string name="nav_header_subtitle">christoph.weissenborn@posteo.de</string>
    <string name="nav_header_desc">title</string>
    <string name="action_settings">settings</string>
    <string name="valid_until">valid until: </string>
    <string name="menu_home">messages</string>
    <string name="menu_gallery">Job search</string>
    <string name="login_unknown_user">The SSI identity "%s" you want to login with is not registered yet. Please register before logging in.</string>
    <string name="menu_slideshow">capability overview</string>.
    <string name="menu_help">Help</string>
    <string name="jobs_link">View on website</string>
    <string name="jobs_requirements">capability requirements:</string>
    <string name="jobs_filter">filter</string>
    <string name="jobs_filter_default">All quotations</string>.
    <string name="jobs_filter_by_comp">Filter by capabilities in SSI wallet</string>.
    <string name="jobs_apply">Apply Now</string>
    <string name="jobs_applied">Your application to %s has been sent automatically. Thank you very much</string>.
    <string name="from">From: %s</string>
    <string name="attachment_unsigned">Appendix: (capabilities)</string>
    <string name="attachment_signed">Appendix: (signed proof of capabilities)</string>
    <string name="deny">Deny</string>.
    <string name="goto_signing">For SSI signing &gt;</string>
    <string name="send_to_ssi_app">Send to SSI wallet</string>.
    <string name="goto_details">Check</string>
    <string name="favourite">Mark as favourite</string>.
    <string name="message_to_student">Dear:student:in,\naneto the proof of capability to your course.\n\continue to wish you success in your studies!</string>
    <string name="message_to_fab">Dear %s\nhier team, I am applying to you in response to the %s advertisement. Enclosed is the evidence of the competencies you require.</string>.
    <string name="msgbox_message_denied_reply">Do you wish to inform the sender of the message that his request has been denied?</string>.
    <string name="message_denied_reply">Your request has been denied</string>.
    <string name="messages_no_new_message">You have no new messages.</string>
    <string name="yes">Yes</string>.
    <string name="no">No</string>
    <string name="capability">Competence</string>.
    <string name="exception_wallet_not_installed">The SSI wallet app is not installed. Please install the SSI wallet app first.</string>
    <string name="exception_unknown_capability">The capability evidence does not match the capability taxonomy used in this app. Please select appropriate evidence.</string>
    <string name="new_button">New message</string>.
    <string name="new_message">Send new messages not implemented. Reply to existing messages.</string>
    <string name="help_messages_title">How can I confirm competencies?</string>
    <string name="help_messages">In the message view, you will receive requests from learners for proof of competencies. There you can also access the Wallet app to sign evidence. These are automatically sent with a message to the requests.</string>.
    <string name="help_jobs_title">How can I find jobs that match my competencies?</string>.
    <string name="help_jobs">Select the filter in the list of job offers in the top right corner. This will launch their wallet where they can select due credentials they have. They will then be shown a filtered list of matching jobs.</string>.
    <string name="help_capability_title">How can I vote for new skills?</string>.
    <string name="help_capability">Select the competence overview in the menu bar. There they will also see suggestions for new competencies that they can vote for.</string>.
    <string name="help_more">For more information, visit https://github.com/gXeeXqBHuHDFTaEnff3Z/ssi_demos</string>
    <string name="caps_spinner_show_all">All competencies</string>.
    <string name="cap_state">State</string>
    <string name="votes">Votes</string>
    <string name="cap_vote_yes">Vote YES</string>
    <string name="cap_vote_no">Vote NO</string>
    <string name="cap_deadline">until </string>
    <string name="cap_voted">You have voted</string>.
    <string name="cap_flag_misuse">Report</string>.
    <string name="cap_flag_misue_confirm">Are you sure you want to report this capability entry as misused?</string>
    <string name="cap_flag_message">The entry has been reported to the moderators.</string>
    <string name="signed_reply">Thank you for signing. The credential was send to %s.</string>
    <string name="caps_spinner_default">Filter capabilties by state</string>
    <string name="jobsearch_hint">Search for job offer</string>
</resources>