<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="de.vertedge.ssicapabilitymanager.ui.home.FragmentMessages"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="de.vertedge.ssicapabilitymanager.ui.gallery.FragmentJobs"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_jobs" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="de.vertedge.ssicapabilitymanager.ui.slideshow.FragmentCapabilities"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_capabilities" />

    <fragment
        android:id="@+id/nav_help"
        android:name="de.vertedge.ssicapabilitymanager.FragmentHelp"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />
</navigation>