<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgVRecycler_jobs_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    app:srcCompat="@android:drawable/btn_star_big_off" />

                <TextView
                    android:id="@+id/tvRecycler_Jobs_Organisation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="ORGANISATION OFFERING"
                    android:textColor="#000000"
                    android:textSize="@dimen/text_large" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvRecycler_Jobs_validUntil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="VALID UNTIL 01/01/2023"
                android:textColor="#000000"
                android:textSize="@dimen/text_small" />

            <TextView
                android:id="@+id/tVRecycler_jobs_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:ellipsize="end"
                android:autoLink="web"
                android:text="@string/jobs_link"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tVRecycler_Jobs_requirementsFollow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:text="@string/jobs_requirements"
                android:textColor="#000000"
                android:textSize="@dimen/text_small" />

            <TextView
                android:id="@+id/tVRecycler_Jobs_requirements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:ellipsize="end"
                android:text="REQUIREMENTS"
                android:textColor="#000000"
                android:textSize="@dimen/text_small" />

            <Button
                android:id="@+id/bRcJobs_ApplyForJob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jobs_apply"
                android:textAllCaps="false"
                android:textSize="@dimen/text_large" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
