<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRecyclerFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:text="NAME"
                android:textSize="@dimen/text_large" />

            <TextView
                android:id="@+id/tvRecyclerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:text="Message body"
                android:textColor="#000000"
                android:textSize="@dimen/text_small" />

            <LinearLayout
                android:id="@+id/layoutRecMessages_attachment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/tVRecyclerMsgAttachmentIs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/attachment_unsigned"
                    android:textSize="@dimen/text_large" />

                <CheckedTextView
                    android:id="@+id/tvRecyclerMsg_CapsChecked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="12dp"
                    android:checked="false"
                    android:text="attached capabilities "
                    android:textColor="#000000"
                    android:textSize="@dimen/text_small" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/bRecyclerDeny"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:backgroundTint="#B82020"
                        android:drawableStart="@drawable/ic_deny"
                        android:onClick="onDenyClick"
                        android:text="@string/deny"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_small" />

                    <Button
                        android:id="@+id/bRecyclerGotoSigning"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:backgroundTint="#1FA122"
                        android:onClick="onOKClick"
                        android:text="@string/goto_signing"
                        android:textAllCaps="false"
                        android:textSize="@dimen/text_small"
                        tools:ignore="TextContrastCheck" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
